Fix viewer spacing for Sheets

--- a/client/static/styles/pages/view_sheet.css
+++ b/client/static/styles/pages/view_sheet.css
@@ -7,3 +7,9 @@
     height: 25px;
     margin-bottom: 2px;
 }
+
+@media only screen and (min-width: 1500px) {
+    .content .viewer-container .viewer {
+        margin-top: 0;
+    }
+}
