--- a/client/static/styles/view_page.css
+++ b/client/static/styles/view_page.css
@@ -103,11 +103,10 @@
         height: 100%;
         margin-top: 0;
         align-items: center;
-        justify-content: center;
     }
 
     .content .viewer-container .viewer {
-        margin-bottom: 60px;
+        margin-top: 7vh;
     }
 
     .content .dashboard {
